--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "font-awesome": "^4.7.0",
@@ -24,6 +25,7 @@
     "init": "^0.1.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.1.0",
+    "mongoose-express-session": "^0.0.5",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
