--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-CALLBACK_URL = http://localhost:3000/auth/facebook/callback
-FB_ID = SKIP
-FB_SECRET = SKIP
-MONGODB_URI = SKIP
+FACEBOOK_CALLBACK = http://localhost:3000/auth/facebook/callback
+FACEBOOK_ID = 
+FACEBOOK_SECRET =
+
+ACOUNT_MONGODB_URI=
 PORT = 3000
-SESSION_SECRET = ThisIsMySECRET
+SESSION_SECRET = 
