--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.9.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -24,7 +25,7 @@
     "handlebars-helpers": "^0.10.0",
     "init": "^0.1.2",
     "method-override": "^3.0.0",
-    "mongoose": "^7.1.0",
+    "mongoose": "^6.5.3",
     "mongoose-express-session": "^0.0.5",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
